--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash": "^4.17.19",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.25",
+    "mongoose-float": "^1.0.4",
     "morgan": "^1.10.0",
     "npm": "^6.14.7",
     "passport": "^0.4.1",
