--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "morgan": "^1.10.0",
     "npm": "^6.14.7",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
