--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "npm": "^6.14.7",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "tailwindcss": "^1.6.2",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
