--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "mongoose": "^5.9.25",
     "mongoose-float": "^1.0.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.11",
     "npm": "^6.14.7",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "tailwindcss": "^1.6.2",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
