--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node app",
-    "dev": "cross-env NODE_ENV=development nodemon app"
+    "dev": "cross-env NODE_ENV=development nodemon app",
+    "build:css": "postcss style/tailwind.css -o ./public/css/style.css"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   "homepage": "https://github.com/iampavangandhi/TradeByte#readme",
   "dependencies": {
     "alphavantage": "^2.1.0",
+    "autoprefixer": "^9.8.6",
     "axios": "^0.19.2",
     "connect-mongo": "^3.2.0",
     "cross-env": "^7.0.2",
@@ -45,9 +47,12 @@
     "npm": "^6.14.7",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "postcss-cli": "^7.1.1",
+    "tailwindcss": "^1.6.2",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "nodemon": "^2.0.4"
   }
 }
