--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node app",
-    "dev": "cross-env NODE_ENV=development nodemon app",
-    "build:css": "postcss style/tailwind.css -o ./public/css/style.css"
+    "build:css": "postcss style/tailwind.css -o ./public/css/style.css",
+    "dev": "cross-env NODE_ENV=development npm run build:css && nodemon app"
   },
   "repository": {
     "type": "git",
