--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build:css": "postcss style/tailwind.css -o ./public/css/style.css",
-    "start": "cross-env NODE_ENV=production node app",
+    "start": "concurrently \"cross-env NODE_ENV=production node app\" \"npm:build:css\"",
     "dev": "concurrently \"cross-env NODE_ENV=development nodemon app\" \"npm:build:css\""
   },
   "repository": {
