--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "alphavantage": "^2.1.0",
     "autoprefixer": "^9.8.6",
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.3.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cross-env": "^7.0.2",
     "date-fns": "^2.15.0",
@@ -48,6 +50,7 @@
     "npm": "^6.14.7",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.6.2",
     "uuid": "^8.3.0"
