--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "concurrently": "^5.3.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.2",
     "date-fns": "^2.15.0",
     "dotenv": "^8.2.0",
