--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "postcss-cli": "^7.1.1",
+    "stripe": "^8.89.0",
     "tailwindcss": "^1.6.2",
     "uuid": "^8.3.0"
   },
